--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Changes in version 1.0.3
+------------------------
+
+BUGFIXES
+
+      o Backported bugfix from devel for handling non-numeric accession
+      	regression (NC_12354).
+
+
 Changes in version 0.99.9
 -------------------------
 
