backport fixes for bugs identified in issues/1 by @dwinter. vbump
From: Gabe Becker <gmbecker@ucdavis.edu>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_3/madman/Rpacks/genbankr@119352 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Changes in version 1.0.4
+------------------------
+
+BUGFIXES
+
+      o Backported bugfix from 1.1.4 for bug when mRNA features do not have 
+      	gene annotations.
+
+      o Backported bugfix from 1.1.4 for when compound ranges (join, order)
+      	include partial ranges.
+
 Changes in version 1.0.3
 ------------------------
 
