fixes suggested by Val. vbump
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_4/madman/Rpacks/genbankr@127463 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/genbankr.Rmd
+++ b/vignettes/genbankr.Rmd
@@ -5,7 +5,7 @@ output:
   BiocStyle::html_document
 vignette: >
   %\VignetteIndexEntry{genbankr}
-  %\VignetteEngine{rmarkdown::rmarkdown}
+  %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}  
 ---
 
